The text color in the modebox tab icons were not drawn accoring to style - this fixes it

BUG:326158